# tidesdb-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yaml
.github/workflows/: ci.yml  release.yml
examples/: README.md  basic.rs  column_families.rs  savepoints.rs  transactions.rs  ttl.rs
src/: error.rs  ffi.rs  lib.rs  tests.rs  tidesdb.rs
