[package]
name = "tidesdb-rs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/tidesdb/tidesdb-rs"
description = "Rust wrapper for TidesDB, a fast and efficient key-value storage engine"
keywords = ["database", "kv", "lsm", "storage", "embedded"]
categories = ["database", "database-implementations"]

[dependencies]
libc = "0.2"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.70"
cc = "1.1"
