[package]
name = "tidesdb-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/0x6flab/tidesdb-rs"
authors = ["Rodney Osodo <socials@rodneyosodo.com>"]
description = "Rust wrapper for TidesDB, a fast and efficient key-value storage engine"
keywords = ["database", "kv", "lsm", "storage", "embedded"]
categories = ["database", "database-implementations"]
readme = "README.md"

[dependencies]
libc = "0.2"
thiserror = "2.0.17"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.1"
